fix: Stuck keys from async call

--- a/src/style.css
+++ b/src/style.css
@@ -27,6 +27,7 @@ input[type="range"] {
   background: hsl(160, 30%, 60%);
   outline: none;
   border-radius: 1rem;
+  cursor: pointer;
 }
 
 #waveform-picker {
@@ -34,6 +35,7 @@ input[type="range"] {
   height: 100%;
   background: hsl(160, 30%, 60%);
   border-radius: 1rem;
+  cursor: pointer;
 }
 .keyboard {
   display: flex;
@@ -50,9 +52,10 @@ input[type="range"] {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  width: 2rem;
-  height: 8rem;
+  justify-content: flex-end;
+  padding-bottom: 10px;
+  width: 50px;
+  height: 200px;
   background-color: hsl(160, 30%, 90%);
   border-radius: 7px;
   cursor: pointer;
@@ -62,6 +65,10 @@ input[type="range"] {
 .black {
   background-color: black;
   color: white;
+  width: 35px;
+  height: 140px;
+  margin-left: -30px;
+  z-index: 1;
 }
 .spacer {
   width: 5rem;
@@ -86,4 +93,5 @@ input[type="range"] {
   height: 100%;
   border-radius: 5px;
   background-color: hsl(160, 30%, 90%);
+  cursor: pointer;
 }
